# hyprland-workspaces

./: Cargo.toml  Makefile  README.md  README.org
src/: args.rs  command.rs  main.rs  workspaces.rs
