[package]
name = "hyprland-workspaces"
version = "0.0.4"
edition = "2021"
authors = ["Atri Hegde <atri@hegdeatri.com>"]
license = "AGPL-3.0"
readme = "README.md"
description = "A tool to get hyprland workspace information easily"
homepage = "https://github.com/hegde-atri/hyprland-workspaces"
repository = "https://github.com/hegde-atri/hyprland-workspaces"
keywords = ["cli", "hyprland", "utility"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4.1.11", features = ["derive"] }
which = "4.4.0"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.95"
anyhow = "1.0.70"
